Improve launcher: remove Profiles label, add home animations, fix skin proxying for other players, tune JVM for FPS